Fix bug footer width on mobile

--- a/style/main.css
+++ b/style/main.css
@@ -4,8 +4,18 @@
  */
  .top_navbar {
      margin-top: 22px;
-     min-width: 1200px;
  }
+
+ @media (max-width: 1200px) {
+    .top_navbar {
+        width: 1200px;
+    }
+
+    body {
+        width: 1200px;
+    }
+}
+
 /* ---------------------------- TOP ---------------------------- */
 .top_navbar .navbar1::after {
     /* If a div has only floats, it collapses. To avoid this one can
@@ -523,7 +533,6 @@
 .bottom {
     background-color: #f2f2f2;
     margin-top: 30px;
-    min-width: 1000px;
     font-family: arial, sans-serif;
     opacity: 75%;
     color: #333;
